--- a/ngApp/templates/home.html
+++ b/ngApp/templates/home.html
@@ -1,1 +1,16 @@
-<h1>Home Page</h1>
+<p class="text-center">
+  <input
+  type="text"
+  placeholder="Enter zip code"
+  ng-model="vm.zipCode">
+  <input
+  type="text"
+  placeholder="Enter Date (2016-12-17)"
+  ng-model="vm.date">
+  <button
+  type="button"
+  name="button"
+  class="btn btn-sm"
+  style="background-color:purple; color:white;"
+  ng-click="vm.search()">search
+</button></p>
