--- a/views/index.html
+++ b/views/index.html
@@ -2,19 +2,24 @@
 <html ng-app="app">
 
 <head>
-  <title>Go Cinema App</title>
+  <title>gocinema</title>
   <meta charset="utf-8">
   <base href="/" />
   <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/site.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <div>
-    <a ui-sref="Home">Home</a>
-  </div>
+
 
   <ui-view></ui-view>
+  <!--footer-->
+  <div class="row footer">
+    <div class="col-xs-12 col-sm-12 col-md-12">
+      <p class="text-center" style="margin-bottom:30px">&copy; 2016 <i class="fa fa-film"></i> Go Cinema | by Brionna White </p>
+    </div>
+  </div>
 
   <script src="/scripts/angular/angular.min.js"></script>
   <script src="/scripts/angular-ui-router/release/angular-ui-router.min.js"></script>
