--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,12 @@
 <head>
   <title>gocinema</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <base href="/" />
-  <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="/css/site.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
@@ -15,19 +19,24 @@
 
   <ui-view></ui-view>
   <!--footer-->
-  <div class="row footer">
+  <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
       <p class="text-center" style="margin-bottom:30px">&copy; 2016 <i class="fa fa-film"></i> Go Cinema | by Brionna White </p>
     </div>
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script src="/scripts/angular/angular.min.js"></script>
   <script src="/scripts/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="/scripts/angular-resource/angular-resource.min.js"></script>
   <script src="/scripts/angular-animate/angular-animate.min.js"></script>
   <script src="/scripts/angular-touch/angular-touch.min.js"></script>
   <script src="/scripts/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous">
+  </script>
   <script src="/js/app.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/controllers.js"></script>
