add api for showtimes

--- a/ngApp/templates/home.html
+++ b/ngApp/templates/home.html
@@ -25,6 +25,7 @@
       </button>
     </p>
 </div>
+<a ui-sref="Showtimes"> Find movie show times in your local threatres</a>
 <!-- movie result-->
 <div class="row">
   <span ng-show="vm.movieData">
