--- a/ngApp/css/site.css
+++ b/ngApp/css/site.css
@@ -34,14 +34,37 @@ img {
 .header{
   font-size: 50px;
   font-family:mayeka;
+  padding-bottom: 30px;
 }
 .header2 {
   font-size: 20px;
   font-family:mayeka;
+
 }
 
 .showtimes {
   color:black;
   text-decoration: none;
   font-size: 18px;
+}
+
+
+.topMovies {
+  text-align: center;
+  padding: 0px 20px 50px 40px;
+}
+
+
+.footer {
+  width:102.5%;
+  height:100px;
+  font-size:18px;
+  padding-top:40px;
+  color:white;
+  background-color: #47afdf;
+  opacity: 0.8;
+}
+
+.results{
+  padding: 10px 0px 50px 10px;
 }
