--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
 
   <ui-view></ui-view>
   <!--footer-->
-  <div class="row">
+  <div class="row footer">
     <div class="col-xs-12 col-sm-12 col-md-12">
       <p class="text-center" style="margin-bottom:30px">&copy; 2016 <i class="fa fa-film"></i> Go Cinema | by Brionna White </p>
     </div>
