--- a/ngApp/templates/home.html
+++ b/ngApp/templates/home.html
@@ -2,7 +2,8 @@
 
 <div class="row background">
   <div class="col-xs-12 col-sm-12 col-md-12">
-    <p class="text-center"><a ui-sref="Showtimes" class="showtimes"> Find movie show times in your local threatres</a></p>
+    <p  style="padding-top:20px" class="text-center"><i style="font-size:30px"class="fa fa-ticket" aria-hidden="true"></i>
+      <a ui-sref="Showtimes" class="showtimes">Find movie show times in your local threatres</a></p>
     <p class="text-center title">
       <i class="fa fa-film"></i> Go Cinema</p>
       <p class="text-center subTitle">
@@ -33,33 +34,93 @@
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
       <p class="text-center header" >Top Rated Movies</p>
-      <!-- <p class="text-center header2"><b>Top picks of rated movies</p> -->
+      <p class="text-center header2"><b>Top 12 picks of rated movies</p>
     </div>
+  </div>
     <div class="row topMovies">
       <div class="col-xs-3 col-sm-3 col-md-3">
     <a
     href="http://www.imdb.com/title/tt0111161/">
     <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BODU4MjU4NjIwNl5BMl5BanBnXkFtZTgwMDU2MjEyMDE@._V1_SX300.jpg" alt="The Shawshank Redemption"></a>
-    <p> The Shawshank Redemption</p>
+    <p>The Shawshank Redemption</p>
+    <p>Rating: &bigstar; 9.2</p>
   </div>
   <div class="col-xs-3 col-sm-3 col-md-3">
     <a href="http://www.imdb.com/title/tt0068646/">
       <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNTc0ZDk1YWItZDZiNi00NTdmLWE0MDctNTVhYTRhMDBmZjNjXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_SX300.jpg" alt="The Godfather"></a>
     <p>The Godfather</p>
+    <p>Rating: &bigstar; 9.2</p>
   </div>
   <div class="col-xs-3 col-sm-3 col-md-3">
     <a href="http://www.imdb.com/title/tt0071562/">
       <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BOTE1MTBiYzYtMDI1OC00ZTUxLTg0ZWQtZjdjMzA0OTM1NGMwXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_SX300.jpg" alt="The Godfather: Part II"></a>
     <p>The Godfather: Part II</p>
+    <p>Rating: &bigstar; 9.0</p>
   </div>
     <div class="col-xs-3 col-sm-3 col-md-3">
       <a href="http://www.imdb.com/title/tt0468569/">
         <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_SX300.jpg" alt="The Dark Knight"></a>
       <p>The Dark Knight</p>
+      <p>Rating: &bigstar; 8.9</p>
     </div>
   </div>
-  <p class="text-center"><a href="http://www.imdb.com/chart/top">View more top rated movies</a></p>
+    <!--  second row-->
+    <div class="row topMovies">
+      <div class="col-xs-3 col-sm-3 col-md-3">
+    <a href="http://www.imdb.com/title/tt0050083/">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BODQwOTc5MDM2N15BMl5BanBnXkFtZTcwODQxNTEzNA@@._V1_SX300.jpg" alt="12 Angry Men"></a>
+    <p> 12 Angry Men</p>
+    <p>Rating: &bigstar; 8.9</p>
+  </div>
+  <div class="col-xs-3 col-sm-3 col-md-3">
+    <a href="http://www.imdb.com/title/tt0108052/">
+      <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMzMwMTM4MDU2N15BMl5BanBnXkFtZTgwMzQ0MjMxMDE@._V1_SX300.jpg" alt="Schindler's List"></a>
+    <p> Schindler's List</p>
+    <p>Rating: &bigstar; 8.9</p>
+  </div>
+  <div class="col-xs-3 col-sm-3 col-md-3">
+    <a href="http://www.imdb.com/title/tt0110912/">
+      <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_SX300.jpg" alt="Pulp Fiction"></a>
+    <p>Pulp Fiction</p>
+    <p>Rating: &bigstar; 8.9</p>
+  </div>
+    <div class="col-xs-3 col-sm-3 col-md-3">
+      <a href="http://www.imdb.com/title/tt0167260/">
+        <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjE4MjA1NTAyMV5BMl5BanBnXkFtZTcwNzM1NDQyMQ@@._V1_SX300.jpg" alt="The Lord of the Rings: The Return of the King"></a>
+      <p>The Lord of the Rings: The Return of the King</p>
+      <p>Rating: &bigstar; 8.9</p>
+    </div>
+  </div>
+  <!--  third row of top rated movies-->
+  <div class="row topMovies">
+    <div class="col-xs-3 col-sm-3 col-md-3">
+  <a href="http://www.imdb.com/title/tt0060196/">
+  <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BOTQ5NDI3MTI4MF5BMl5BanBnXkFtZTgwNDQ4ODE5MDE@._V1_SX300.jpg" alt="The Good, the Bad and the Ugly"></a>
+  <p>The Good, the Bad and the Ugly</p>
+  <p>Rating: &bigstar; 8.9</p>
+
 </div>
+<div class="col-xs-3 col-sm-3 col-md-3">
+  <a href="http://www.imdb.com/title/tt0137523/">
+    <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BNGM2NjQxZTAtMmU5My00YTk5LWFmOWMtYjZlYzk4YzMwNjFlXkEyXkFqcGdeQXVyNDk3NzU2MTQ@._V1_SX300.jpg" alt="Fight Club"></a>
+  <p>Fight Club</p>
+  <p>Rating: &bigstar; 8.8</p>
+
+</div>
+  <div class="col-xs-3 col-sm-3 col-md-3">
+    <a href="http://www.imdb.com/title/tt0167261/">
+      <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTAyNDU0NjY4NTheQTJeQWpwZ15BbWU2MDk4MTY2Nw@@._V1_SX300.jpg" alt="The Lord of the Rings: The Return of the King"></a>
+    <p> The Lord of the Rings: The Two Towers</p>
+    <p>Rating: &bigstar; 8.8</p>
+  </div>
+  <div class="col-xs-3 col-sm-3 col-md-3">
+    <a href="http://www.imdb.com/title/tt0080684/">
+      <img src="https://images-na.ssl-images-amazon.com/images/M/MV5BYmViY2M2MTYtY2MzOS00YjQ1LWIzYmEtOTBiNjhlMGM0NjZjXkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_SX300.jpg" alt="Star Wars: Episode V - The Empire Strikes Back"></a>
+    <p>Star Wars: Episode V - The Empire Strikes Back</p>
+    <p>Rating: &bigstar; 8.8</p>
+  </div>
+</div>
+  <p class="text-center"><a href="http://www.imdb.com/chart/top">View more top rated movies</a></p>
 </span>
 <!-- movie result-->
 <div class="row results">
