--- a/ngApp/css/site.css
+++ b/ngApp/css/site.css
@@ -34,11 +34,11 @@ img {
 .header{
   font-size: 50px;
   font-family:mayeka;
-  padding-bottom: 30px;
 }
 .header2 {
   font-size: 20px;
   font-family:mayeka;
+  padding-bottom: 30px;
 
 }
 
@@ -51,7 +51,8 @@ img {
 
 .topMovies {
   text-align: center;
-  padding: 0px 20px 50px 40px;
+  padding: 0px 0px 10px 0px;
+  font-size: 12px;
 }
 
 
@@ -67,4 +68,8 @@ img {
 
 .results{
   padding: 10px 0px 50px 10px;
+}
+
+&bigstar {
+  
 }
