--- a/ngApp/templates/home.html
+++ b/ngApp/templates/home.html
@@ -13,10 +13,11 @@
     <div class="searchBar">
       <p class="text-center">
         <input
+          class="search"
           type="text"
           placeholder="Enter movie title"
           ng-model="vm.movie">
-      <button
+    <br><br>  <button
         type="button"
         name="button"
         class="button btn btn-sm"
