--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
   <title>gocinema</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta class="visible-xs" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <base href="/" />
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -21,7 +22,7 @@
   <!--footer-->
   <div class="row footer">
     <div class="col-xs-12 col-sm-12 col-md-12">
-      <p class="text-center" style="margin-bottom:30px">&copy; 2016 <i class="fa fa-film"></i> Go Cinema | by Brionna White </p>
+      <p class="text-center" style="margin-bottom:30px">&copy; 2016 <i class="fa fa-film"></i> Go Cinema | <a href="https://brionnaw.github.io/">by Brionna White</a> </p>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
