--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 
 <head>
-  <title>gocinema</title>
+  <title>Cinema Go</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta class="visible-xs" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
