--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta class="visible-xs" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <link rel="shortcut icon" href="/images/Logomakr_3JLfGw.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/images/Logomakr_09RJI8.png" type="image/x-icon" />
   <base href="/" />
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
